@@ -319,6 +319,7 @@ uniqs(Reg *r)
  * if the system forces R0 to be zero,
  * convert references to $0 to references to R0.
  */
+int
 regzer(Adr *a)
 {
 	if(R0ISZERO) {
@@ -333,6 +334,7 @@ regzer(Adr *a)
 	return 0;
 }
 
+int
 regtyp(Adr *a)
 {
 
@@ -526,6 +528,7 @@ copyprop(Reg *r0)
 	return copy1(v1, v2, r0->s1, 0);
 }
 
+int
 copy1(Adr *v1, Adr *v2, Reg *r, int f)
 {
 	int t;
